// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`autocomplete interaction snapshots > Enter on empty +Block field advances to criteria instead of submitting 1`] = `
"                                                                                
  Create Task                                                                   
  ────────────────────────────────────────────────────────────                  
  Type              feat                                                        
  Priority          ⏹️ 3-normal                                                  
  Title           ····················                                          
  Description     ····················                                          
  Flag            ····················                                          
  Parent          type to search...                                             
  + Block         type to search...                                             
› + Add                                                                         
  ────────────────────────────────────────────────────────────                  
  ↑↓ navigate  ←→ cycle type/priority  Ctrl+N newline  Enter submit  Esc quit   "
`;

exports[`autocomplete interaction snapshots > Enter on empty parent field skips to next field without selecting 1`] = `
"                                                                                
  Create Task                                                                   
  ────────────────────────────────────────────────────────────                  
  Type              feat                                                        
  Priority          ⏹️ 3-normal                                                  
  Title           ····················                                          
  Description     ····················                                          
  Flag            ····················                                          
  Parent          type to search...                                             
› + Block                                                                       
                    → MRKL-001 - auth epic                                      
                      MRKL-002 - fix login bug                                  
                      MRKL-003 - auth tests                                     
  + Add           ····················                                          
  ────────────────────────────────────────────────────────────                  
  ↑↓ navigate  ←→ cycle type/priority  Ctrl+N newline  Enter submit  Esc quit   "
`;

exports[`autocomplete interaction snapshots > Enter selects highlighted suggestion 1`] = `
"                                                                                
  Create Task                                                                   
  ────────────────────────────────────────────────────────────                  
  Type              feat                                                        
  Priority          ⏹️ 3-normal                                                  
  Title           ····················                                          
  Description     ····················                                          
  Flag            ····················                                          
› Parent          auth                                                          
                      MRKL-001 - auth epic                                      
                    → MRKL-003 - auth tests                                     
  + Block         type to search...                                             
  + Add           ····················                                          
  ────────────────────────────────────────────────────────────                  
  ↑↓ navigate  ←→ cycle type/priority  Ctrl+N newline  Enter submit  Esc quit   "
`;

exports[`autocomplete interaction snapshots > right arrow navigates suggestion highlight 1`] = `
"                                                                                
  Create Task                                                                   
  ────────────────────────────────────────────────────────────                  
  Type              feat                                                        
  Priority          ⏹️ 3-normal                                                  
  Title           ····················                                          
  Description     ····················                                          
  Flag            ····················                                          
› Parent          MRKL                                                          
                      MRKL-001 - auth epic                                      
                    → MRKL-002 - fix login bug                                  
                      MRKL-003 - auth tests                                     
  + Block         type to search...                                             
  + Add           ····················                                          
  ────────────────────────────────────────────────────────────                  
  ↑↓ navigate  ←→ cycle type/priority  Ctrl+N newline  Enter submit  Esc quit   "
`;

exports[`autocomplete interaction snapshots > typing in parent field shows filtered suggestions 1`] = `
"                                                                                
  Create Task                                                                   
  ────────────────────────────────────────────────────────────                  
  Type              feat                                                        
  Priority          ⏹️ 3-normal                                                  
  Title           ····················                                          
  Description     ····················                                          
  Flag            ····················                                          
› Parent                                                                        
                    → MRKL-001 - auth epic                                      
                      MRKL-002 - fix login bug                                  
                      MRKL-003 - auth tests                                     
  + Block         type to search...                                             
  + Add           ····················                                          
  ────────────────────────────────────────────────────────────                  
  ↑↓ navigate  ←→ cycle type/priority  Ctrl+N newline  Enter submit  Esc quit   "
`;

exports[`interaction snapshots > arrow down moves to priority field 1`] = `
"                                                                                
  Create Task                                                                   
  ────────────────────────────────────────────────────────────                  
› Type            ◂ feat ▸                                                      
  Priority          ⏹️ 3-normal                                                  
  Title           ····················                                          
  Description     ····················                                          
  Flag            ····················                                          
  Parent          type to search...                                             
  + Block         type to search...                                             
  + Add           ····················                                          
  ────────────────────────────────────────────────────────────                  
  ↑↓ navigate  ←→ cycle type/priority  Ctrl+N newline  Enter submit  Esc quit   "
`;

exports[`interaction snapshots > arrow up returns to type field 1`] = `
"                                                                                
  Create Task                                                                   
  ────────────────────────────────────────────────────────────                  
› Type            ◂ feat ▸                                                      
  Priority          ⏹️ 3-normal                                                  
  Title           ····················                                          
  Description     ····················                                          
  Flag            ····················                                          
  Parent          type to search...                                             
  + Block         type to search...                                             
  + Add           ····················                                          
  ────────────────────────────────────────────────────────────                  
  ↑↓ navigate  ←→ cycle type/priority  Ctrl+N newline  Enter submit  Esc quit   "
`;

exports[`interaction snapshots > initial render shows type field highlighted 1`] = `
"                                                                                
  Create Task                                                                   
  ────────────────────────────────────────────────────────────                  
› Type            ◂ feat ▸                                                      
  Priority          ⏹️ 3-normal                                                  
  Title           ····················                                          
  Description     ····················                                          
  Flag            ····················                                          
  Parent          type to search...                                             
  + Block         type to search...                                             
  + Add           ····················                                          
  ────────────────────────────────────────────────────────────                  
  ↑↓ navigate  ←→ cycle type/priority  Ctrl+N newline  Enter submit  Esc quit   "
`;

exports[`interaction snapshots > left/right arrows cycle type options 1`] = `
"                                                                                
  Create Task                                                                   
  ────────────────────────────────────────────────────────────                  
› Type            ◂ fix ▸                                                       
  Priority          ⏹️ 3-normal                                                  
  Title           ····················                                          
  Description     ····················                                          
  Flag            ····················                                          
  Parent          type to search...                                             
  + Block         type to search...                                             
  + Add           ····················                                          
  ────────────────────────────────────────────────────────────                  
  ↑↓ navigate  ←→ cycle type/priority  Ctrl+N newline  Enter submit  Esc quit   "
`;

exports[`interaction snapshots > left/right arrows cycle type options 2`] = `
"                                                                                
  Create Task                                                                   
  ────────────────────────────────────────────────────────────                  
› Type            ◂ feat ▸                                                      
  Priority          ⏹️ 3-normal                                                  
  Title           ····················                                          
  Description     ····················                                          
  Flag            ····················                                          
  Parent          type to search...                                             
  + Block         type to search...                                             
  + Add           ····················                                          
  ────────────────────────────────────────────────────────────                  
  ↑↓ navigate  ←→ cycle type/priority  Ctrl+N newline  Enter submit  Esc quit   "
`;

exports[`interaction snapshots > pressing Enter on filled form triggers submit 1`] = `"                                                                                "`;

exports[`interaction snapshots > typing characters into title field shows text on screen 1`] = `
"                                                                                
  Create Task                                                                   
  ────────────────────────────────────────────────────────────                  
  Type              feat                                                        
  Priority          ⏹️ 3-normal                                                  
› Title           Hello                                                         
  Description     ····················                                          
  Flag            ····················                                          
  Parent          type to search...                                             
  + Block         type to search...                                             
  + Add           ····················                                          
  ────────────────────────────────────────────────────────────                  
  ↑↓ navigate  ←→ cycle type/priority  Ctrl+N newline  Enter submit  Esc quit   "
`;

exports[`render > active autocomplete with suggestions snapshot at 80 cols 1`] = `
"                                                                                
  Create Task                                                                   
  ────────────────────────────────────────────────────────────                  
  Type              feat                                                        
  Priority          ⏹️ 3-normal                                                  
  Title           ····················                                          
  Description     ····················                                          
  Flag            ····················                                          
› Parent          auth                                                          
                      MRKL-010 - Auth epic                                      
                    → MRKL-020 - Auth refactor                                  
                      MRKL-030 - Auth tests                                     
  + Block         type to search...                                             
  + Add           ····················                                          
  ────────────────────────────────────────────────────────────                  
  ↑↓ navigate  ←→ cycle type/priority  Ctrl+N newline  Enter submit  Esc quit   "
`;

exports[`render > create form snapshot at 60 cols 1`] = `
"                                                            
  Create Task                                               
  ────────────────────────────────────────────────────────  
› Type            ◂ feat ▸                                  
  Priority          ⏹️ 3-normal                              
  Title           ····················                      
  Description     ····················                      
  Flag            ····················                      
  Parent          type to search...                         
  + Block         type to search...                         
  + Add           ····················                      
  ────────────────────────────────────────────────────────  
  ↑↓ navigate  ←→ cycle type/priority  Ctrl+N newline  Enter
 submit  Esc quit                                           "
`;

exports[`render > edit form snapshot at 60 cols 1`] = `
"                                                            
  Edit Task MRKL-042                                        
  ────────────────────────────────────────────────────────  
› Type            ◂ feat ▸                                  
  Status            todo                                    
  Priority          ⏹️ 3-normal                              
  Title           Fix responsive layout                     
  Description     Make the form work at narrow widths       
  Flag            ····················                      
  Parent          type to search...                         
  + Block         type to search...                         
  + Add           ····················                      
  ────────────────────────────────────────────────────────  
  ↑↓ navigate  ←→ cycle type/status/priority  Ctrl+N newline
  Enter submit  Esc quit                                    "
`;

exports[`render > edit mode form with status field snapshot at 80 cols 1`] = `
"                                                                                
  Edit Task MRKL-042                                                            
  ────────────────────────────────────────────────────────────                  
› Type            ◂ feat ▸                                                      
  Status            in-progress                                                 
  Priority          ⏹️ 3-normal                                                  
  Title           Fix login redirect                                            
  Description     Users are redirected to wrong page after login                
  Flag            ····················                                          
  Parent          type to search...                                             
  + Block         type to search...                                             
  Criterion 1     Redirect goes to dashboard                                    
  + Add           ····················                                          
  ────────────────────────────────────────────────────────────                  
  ↑↓ navigate  ←→ cycle type/status/priority  Ctrl+N newline  Enter submit  Esc 
quit                                                                            "
`;

exports[`render > empty create form snapshot at 40 cols 1`] = `
"                                        
  Create Task                           
  ────────────────────────────────────  
› Type            ◂ feat ▸              
  Priority          ⏹️ 3-normal          
  Title           ····················  
  Description     ····················  
  Flag            ····················  
  Parent          type to search...     
  + Block         type to search...     
  + Add           ····················  
  ────────────────────────────────────  
  ↑↓ navigate  ←→ cycle type/priority  C
trl+N newline  Enter submit  Esc quit   "
`;

exports[`render > empty create form snapshot at 80 cols 1`] = `
"                                                                                
  Create Task                                                                   
  ────────────────────────────────────────────────────────────                  
› Type            ◂ feat ▸                                                      
  Priority          ⏹️ 3-normal                                                  
  Title           ····················                                          
  Description     ····················                                          
  Flag            ····················                                          
  Parent          type to search...                                             
  + Block         type to search...                                             
  + Add           ····················                                          
  ────────────────────────────────────────────────────────────                  
  ↑↓ navigate  ←→ cycle type/priority  Ctrl+N newline  Enter submit  Esc quit   "
`;

exports[`render > empty create form snapshot at 120 cols 1`] = `
"                                                                                                                        
  Create Task                                                                                                           
  ────────────────────────────────────────────────────────────                                                          
› Type            ◂ feat ▸                                                                                              
  Priority          ⏹️ 3-normal                                                                                          
  Title           ····················                                                                                  
  Description     ····················                                                                                  
  Flag            ····················                                                                                  
  Parent          type to search...                                                                                     
  + Block         type to search...                                                                                     
  + Add           ····················                                                                                  
  ────────────────────────────────────────────────────────────                                                          
  ↑↓ navigate  ←→ cycle type/priority  Ctrl+N newline  Enter submit  Esc quit                                           "
`;

exports[`render > error state (empty title) snapshot at 80 cols 1`] = `
"                                                                                
  Create Task                                                                   
  ────────────────────────────────────────────────────────────                  
  Title cannot be empty                                                         
  Type              feat                                                        
  Priority          ⏹️ 3-normal                                                  
› Title                                                                         
  Description     ····················                                          
  Flag            ····················                                          
  Parent          type to search...                                             
  + Block         type to search...                                             
  + Add           ····················                                          
  ────────────────────────────────────────────────────────────                  
  ↑↓ navigate  ←→ cycle type/priority  Ctrl+N newline  Enter submit  Esc quit   "
`;

exports[`render > filled create form snapshot at 80 cols 1`] = `
"                                                                                
  Create Task                                                                   
  ────────────────────────────────────────────────────────────                  
  Type              chore                                                       
  Priority          ⏹️ 3-normal                                                  
› Title           Implement user authentication                                 
  Description     Add JWT-based auth with refresh tokens                        
  Flag            ····················                                          
  Parent          MRKL-010 - Auth epic                                          
  Blocks 1        MRKL-011                                                      
  Blocks 2        MRKL-012                                                      
  + Block         type to search...                                             
  Criterion 1     Login endpoint returns JWT                                    
  Criterion 2     Refresh token rotation works                                  
  + Add           ····················                                          
  ────────────────────────────────────────────────────────────                  
  ↑↓ navigate  ←→ cycle type/priority  Ctrl+N newline  Enter submit  Esc quit   "
`;

exports[`render > long text wrapping snapshot at 40 cols 1`] = `
"                                        
  Create Task                           
  ────────────────────────────────────  
  Type              feat                
  Priority          ⏹️ 3-normal          
  Title           A very long task tit  
                  le that should wrap   
                  at narrow width       
› Description     This description con  
                  tains enough text to  
                   demonstrate how the  
                   form handles word w  
                  rapping when the ter  
                  minal is very narrow  
  Flag            ····················  
  Parent          type to search...     
  + Block         type to search...     
  Criterion 1     First criterion with  
                   a long description   
                  that wraps            
  + Add           ····················  
  ────────────────────────────────────  
  ↑↓ navigate  ←→ cycle type/priority  C
trl+N newline  Enter submit  Esc quit   "
`;

exports[`render > terminal too small snapshot at 25 cols 1`] = `
"                         
                         
                         
                         
                         
                         
                         
                         
                         
                         
                         
   Terminal too small    
 Need 40+ cols (have 25) "
`;
